--- a/css/variables.css
+++ b/css/variables.css
@@ -3,53 +3,48 @@
     --------------------------------- COLORS ---------------------------------
     ######################################################################## */
 
-    /* Grays */
-    --gray-90: #191919;
-    --filter-gray-90: brightness(0) saturate(100%) invert(0%) sepia(1%) saturate(430%) hue-rotate(344deg) brightness(103%) contrast(80%);
+    /* Greys */
+    --grey-90: #191919;
+    --filter-grey-90: brightness(0) saturate(100%) invert(0%) sepia(1%) saturate(430%) hue-rotate(344deg) brightness(103%) contrast(80%);
 
-    --gray-80: #333333;
-    --filter-gray-80: brightness(0) saturate(100%) invert(16%) sepia(12%) saturate(2%) hue-rotate(314deg) brightness(90%) contrast(86%);
+    --grey-80: #333333;
+    --filter-grey-80: brightness(0) saturate(100%) invert(16%) sepia(12%) saturate(2%) hue-rotate(314deg) brightness(90%) contrast(86%);
 
-    --gray-70: #4d4d4d;
-    --filter-gray-70: brightness(0) saturate(100%) invert(26%) sepia(0%) saturate(1302%) hue-rotate(237deg) brightness(107%) contrast(88%);
+    --grey-70: #4d4d4d;
+    --filter-grey-70: brightness(0) saturate(100%) invert(26%) sepia(0%) saturate(1302%) hue-rotate(237deg) brightness(107%) contrast(88%);
 
-    --gray-60: #666666;
-    --filter-gray-60: brightness(0) saturate(100%) invert(42%) sepia(0%) saturate(0%) hue-rotate(321deg) brightness(92%) contrast(90%);
+    --grey-60: #666666;
+    --filter-grey-60: brightness(0) saturate(100%) invert(42%) sepia(0%) saturate(0%) hue-rotate(321deg) brightness(92%) contrast(90%);
 
-    --gray-50: #808080;
-    --filter-gray-50: brightness(0) saturate(100%) invert(53%) sepia(0%) saturate(967%) hue-rotate(187deg) brightness(94%) contrast(82%);
+    --grey-50: #808080;
+    --filter-grey-50: brightness(0) saturate(100%) invert(53%) sepia(0%) saturate(967%) hue-rotate(187deg) brightness(94%) contrast(82%);
 
-    --gray-40: #999999;
-    --filter-gray-40: brightness(0) saturate(100%) invert(75%) sepia(0%) saturate(256%) hue-rotate(167deg) brightness(80%) contrast(99%);
+    --grey-40: #999999;
+    --filter-grey-40: brightness(0) saturate(100%) invert(75%) sepia(0%) saturate(256%) hue-rotate(167deg) brightness(80%) contrast(99%);
 
-    --gray-30: #b3b3b3;
-    --filter-gray-30: brightness(0) saturate(100%) invert(71%) sepia(0%) saturate(0%) hue-rotate(344deg) brightness(103%) contrast(88%);
+    --grey-30: #b3b3b3;
+    --filter-grey-30: brightness(0) saturate(100%) invert(71%) sepia(0%) saturate(0%) hue-rotate(344deg) brightness(103%) contrast(88%);
 
-    --gray-20: #cccccc;
-    --filter-gray-20: brightness(0) saturate(100%) invert(68%) sepia(98%) saturate(0%) hue-rotate(134deg) brightness(100%) contrast(95%);
+    --grey-20: #cccccc;
+    --filter-grey-20: brightness(0) saturate(100%) invert(68%) sepia(98%) saturate(0%) hue-rotate(134deg) brightness(100%) contrast(95%);
 
-    --gray-10: #e6e6e6;
-    --filter-gray-10: brightness(0) saturate(100%) invert(98%) sepia(13%) saturate(70%) hue-rotate(179deg) brightness(111%) contrast(80%);
+    --grey-10: #e6e6e6;
+    --filter-grey-10: brightness(0) saturate(100%) invert(98%) sepia(13%) saturate(70%) hue-rotate(179deg) brightness(111%) contrast(80%);
 
     --filter--to-white: brightness(0) saturate(100%) invert(99%) sepia(7%) saturate(13%) hue-rotate(26deg) brightness(98%) contrast(104%);
 
     /* App colors */
-    --light-blue: #8ecbee;
-    --blue:       #004f7c;
-    --dark-blue:  #0c3c57;
-
-    --light-green: #d0ec9f;
-
-    --fluo-green:   #00ff00;
-    --fluo-yellow:  #ffff00;
-    --fluo-magenta: #ff00ff;
+    --purple-light: #9261b1;
+    --purple:       #8f5ead;
+    --purple-dark:  #8857a7;
 
     /* Usage */
+    --color--global-primary: var(--purple);
     --html-background-color: white;
     --header-background-color: var(--blue);
     
     /* Font colors */
-    --font-color-default: white;
+    --font-color-default: var(--grey-80);
     --font-color-links: var(--light-blue);
 
     --box-shadow-soft: 0px 3px 10px #0000004f;
